tests/good/in/sugarMultiArgFun.vshs
// Syntactic sugar for sumOfTwo = \a -> \b -> ...
sumOfTwo a b :: Int -> Int -> Int = a + b;