tests/bad/divByZero.vshs
// Worst sin of them all.

a :: Int = 1 / 0;